syntax = "proto3";

package mspkg.api;

option go_package="github.com/fidelfly/fxms/mspkg/proto/api";

message IdResponse {
	int64 id = 1;
}

message UpdateInfo {
	int64 id = 1;
	repeated string cols = 2;
}

message ErrorMessage {
	string err_code = 1;
	string err_message = 2;
}